#*******************************************************************************
# Makefile.am (latex)
#-------------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	seq66 documents
# \author     	Chris Ahlstrom
# \date       	2020-10-02
# \update     	2020-10-02
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
# 		Makefile for the seq66/doc/latex sub-project.
#
#-------------------------------------------------------------------------------

SUBDIRS = tex

#******************************************************************************
# vim: ts=3 sw=3 noet ft=automake
#------------------------------------------------------------------------------
