#*****************************************************************************
# meson.build (seq66)
#-----------------------------------------------------------------------------
##
# \file        seq_qt6/latex/meson.build
# \library     seq66
# \author      Chris Ahlstrom
# \date        2026-05-04
# \updates     2026-05-04
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "seq66" library. See the top-level meson.build
#  file for license information.
#
#  Moved to the parent directory.
#
#-----------------------------------------------------------------------------

subdir('tex')

#****************************************************************************
# meson.build (seq_qt6/latex)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
