#*****************************************************************************
# meson.build (seq66)
#-----------------------------------------------------------------------------
##
# \file        libseq66/include/meson.build
# \library     seq66
# \author      Chris Ahlstrom
# \date        2026-04-23
# \updates     2026-05-09
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "seq66" library. See the top-level meson.build
#  file for license information.
#
#-----------------------------------------------------------------------------

libseq66_headers += files(
    'base64_images.hpp',
    'seq66_features.h',
    'seq66_features.hpp',
    'seq66_platform_macros.h',
    'cfg/basesettings.hpp',
    'cfg/cmdlineopts.hpp',
    'cfg/comments.hpp',
    'cfg/configfile.hpp',
    'cfg/midicontrolfile.hpp',
    'cfg/mutegroupsfile.hpp',
    'cfg/notemapfile.hpp',
    'cfg/patchesfile.hpp',
    'cfg/playlistfile.hpp',
    'cfg/rcfile.hpp',
    'cfg/rcsettings.hpp',
    'cfg/recent.hpp',
    'cfg/scales.hpp',
    'cfg/sessionfile.hpp',
    'cfg/settings.hpp',
    'cfg/userinstrument.hpp',
    'cfg/usermidibus.hpp',
    'cfg/usrfile.hpp',
    'cfg/usrsettings.hpp',
    'cfg/zoomer.hpp',
    'ctrl/automation.hpp',
    'ctrl/keycontrol.hpp',
    'ctrl/keycontainer.hpp',
    'ctrl/keymap.hpp',
    'ctrl/keystroke.hpp',
    'ctrl/midicontrolin.hpp',
    'ctrl/midicontrol.hpp',
    'ctrl/midicontrolbase.hpp',
    'ctrl/midicontrolout.hpp',
    'ctrl/midimacro.hpp',
    'ctrl/midimacros.hpp',
    'ctrl/midioperation.hpp',
    'ctrl/opcontainer.hpp',
    'ctrl/opcontrol.hpp',
    'midi/busarray.hpp',
    'midi/businfo.hpp',
    'midi/calculations.hpp',
    'midi/controllers.hpp',
    'midi/drums.hpp',
    'midi/editable_event.hpp',
    'midi/editable_events.hpp',
    'midi/event.hpp',
    'midi/eventlist.hpp',
    'midi/jack_assistant.hpp',
    'midi/mastermidibase.hpp',
    'midi/mastermidibus.hpp',
    'midi/midibase.hpp',
    'midi/midibus_common.hpp',
    'midi/midibus.hpp',
    'midi/midibytes.hpp',
    'midi/midifile.hpp',
    'midi/midi_splitter.hpp',
    'midi/midi_vector_base.hpp',
    'midi/midi_vector.hpp',
    'midi/patches.hpp',
    'midi/wrkfile.hpp',
    'play/clockslist.hpp',
    'play/inputslist.hpp',
    'play/metro.hpp',
    'play/mutegroup.hpp',
    'play/mutegroups.hpp',
    'play/notemapper.hpp',
    'play/performer.hpp',
    'play/playlist.hpp',
    'play/portslist.hpp',
    'play/screenset.hpp',
    'play/seq.hpp',
    'play/sequence.hpp',
    'play/setmapper.hpp',
    'play/setmaster.hpp',
    'play/songsummary.hpp',
    'play/triggers.hpp',
    'sessions/clinsmanager.hpp',
    'sessions/smanager.hpp',
    'os/daemonize.hpp',
    'os/shellexecute.hpp',
    'os/timing.hpp',
    'util/automutex.hpp',
    'util/basic_macros.h',
    'util/basic_macros.hpp',
    'util/condition.hpp',
    'util/filefunctions.hpp',
    'util/named_bools.hpp',
    'util/palette.hpp',
    'util/recmutex.hpp',
    'util/rect.hpp',
    'util/ring_buffer.hpp',
    'util/strfunctions.hpp'
)

#****************************************************************************
# meson.build (libseq66/include)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
